--- a/templates/main.html
+++ b/templates/main.html
@@ -4,12 +4,13 @@
     <p>This is the main page content.</p>
     <span id="user-info">Test</span>
     <img src="imgs/placeholder_avatar.svg" alt="User Avatar" class="avatar" id="user-pfp"> -->
-<link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+
 <div class="main-container">
   <aside class="sidebar">
     <div class="sidebar-content">
       <img
-        src="imgs/placeholder_logo.svg"
+        src="../imgs/placeholder_logo.svg"
         alt="Company Logo"
         class="main-logo"
       />
@@ -54,7 +55,7 @@
         <img src="../imgs/messenger.png" alt="Messenger Icon" class="icon" />
         <img src="../imgs/notification.png" alt="Notification Icon" class="icon" />
         <img
-          src="imgs/placeholder_avatar.svg"
+          src="../imgs/placeholder_avatar.svg"
           alt="User Avatar"
           class="avatar"
           id="user-pfp"
